Added delete interest ticker api & rename security
